# paper-digest

./: .gitignore  README.md  config.example.yaml  install  main.py  pyproject.toml  run
scripts/: schedule
src/: __init__.py  arxiv_fetcher.py  claude_runner.py  config_loader.py  history_manager.py  html_converter.py  notifier.py
src/prompts/: select_and_summarize.md
src/scripts/: setup-cron.sh
